<resources>
    <string name="app_name">CallForStratagems</string>
    <string name="default_string" translatable="false">NULL</string>
    <string name="menu_back">Back</string>
    <string name="fragment_root">CallForStratagems</string>
    <string name="fragment_editGroup">Edit Group</string>
    <string name="fragment_settings">Settings</string>
    <string name="fragment_settings_sync">Advanced Options</string>
    <string name="fragment_settings_asr">Speech Recognition</string>
    <string name="fragment_viewGroup">Browse Group</string>
    <string name="fragment_play">Play</string>
    <string name="fragment_stratagemsList">Stratagems List</string>
    <string name="menu_save">Save</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="root_no_group">The Galactic War Awaits</string>
    <string name="root_group_overflow" translatable="false">... +%1$s</string>
    <string name="editGroup_title">New Stratagems Group</string>
    <string name="editGroup_title_hint">Stratagems Group Name</string>
    <string name="play_blank" translatable="false">PERSONAL HELLPAD\nSYSTEM</string>
    <string name="play_exit">Exit</string>
    <string name="play_mode">Input mode</string>
    <string name="play_freeInput">FREE INPUT</string>
    <string name="play_upward">Upward</string>
    <string name="play_downward">Downward</string>
    <string name="play_backward">Backward</string>
    <string name="play_forward">Forward</string>
    <string name="play_network_status">Connect status</string>
    <string name="play_asr">ASR</string>
    <string name="set_conn_hdr">Connection</string>
    <string name="set_conn_server">Server</string>
    <string name="set_conn_addr">Address</string>
    <string name="set_conn_port">Port</string>
    <string name="set_conn_retry">Retry Times</string>
    <string name="set_conn_test">Test Connection</string>
    <string name="set_conn_scan">Scan QR Code</string>
    <string name="set_conn_scan_desc">Scan the QR code from the server to obtain the connection configuration</string>
    <string name="tcp_scan_success">Scan Successful</string>
    <string name="tcp_scan_failed">Scan Failed</string>
    <string name="tcp_scan_cancel">Scan Canceled</string>
    <string name="set_sync_hdr">Sync</string>
    <string name="set_sync_port">Port</string>
    <string name="set_sync_delay">Input Interval Time</string>
    <string name="set_sync_input_open">Input: Open Stratagems List</string>
    <string name="set_sync_advance_hdr">Advanced Options</string>
    <string name="set_sync_advance_alert">Modifying the following settings may reduce server stability</string>
    <string name="set_sync_apply">Apply Configuration to Server</string>
    <string name="set_sync_apply_finished">Please accept the request on the server, then restart the server to apply the configuration</string>
    <string name="set_unit_ms">ms</string>
    <string name="set_unit_day">days</string>
    <string name="set_unit_percentage">%</string>
    <string name="set_sync_type_open">Type: Open Stratagems List</string>
    <string name="set_sync_input_up">Input: Up</string>
    <string name="set_sync_input_down">Input: Down</string>
    <string name="set_sync_input_left">Input: Left</string>
    <string name="set_sync_input_right">Input: Right</string>
    <string name="set_sync_ip">Server Listening Address</string>
    <string name="set_sync_ip_desc">Specify the server listening address, recommended to set it only when there are multiple NICs</string>
    <string name="set_sync_ip_auto">Auto Detect</string>
    <string name="set_sync_auth">Enable Client Authentication</string>
    <string name="set_sync_auth_desc">To improve security, only authenticated clients are allowed to execute instructions on the server</string>
    <string name="set_sync_auth_timeout">Authentication Expiration Date</string>
    <string name="set_sync_auth_timeout_desc">To enhance security, client authentication information will expire after a specified time</string>
    <string name="set_sync_debug">Enable Server Debug Mode</string>
    <string name="set_sync_debug_desc">Display detailed server logs</string>
    <string name="set_ctrl_hdr">Control</string>
    <string name="set_ctrl_simplified_mode">Enable Simplified Mode</string>
    <string name="set_ctrl_simplified_mode_desc">Keep only macro functions and remove most decorations</string>
    <string name="set_ctrl_simplified_stratagem_size">Simplified Mode Stratagem Size</string>
    <string name="set_ctrl_lang_stratagem">Language: Stratagem Name</string>
    <string name="set_ctrl_gst_swp_distance_threshold">Gesture Swipe Distance Threshold</string>
    <string name="set_ctrl_gst_swp_velocity_threshold">Gesture Swipe Velocity Threshold</string>
    <string name="set_ctrl_orientation">Screen Orientation</string>
    <string name="set_ctrl_simplified_orientation">Screen Orientation (Simplified Mode)</string>
    <string name="set_unit_pixel">pixel</string>
    <string name="set_unit_pixel_s">pixel/s</string>
    <string name="set_ctrl_fastboot_mode">Enable Fastboot Mode</string>
    <string name="set_ctrl_fastboot_mode_desc">Click the group to start directly, long press the group to view details (this will disable you to adjust the group order)</string>
    <string name="set_ctrl_sfx">Enable Sound Effects</string>
    <string name="set_ctrl_sfx_desc">Enable sound effects for step input and stratagem activation</string>
    <string name="set_ctrl_vibrator">Enable Vibrator</string>
    <string name="set_ctrl_vibrator_desc">Enable vibrator for step input and stratagem activation</string>
    <string name="set_ctrl_asr_hdr">Speech Recognition</string>
    <string name="set_ctrl_asr_alert">Experimental Features</string>
    <string name="set_ctrl_asr_alert_desc">Enabling speech recognition will increase heating and power consumption</string>
    <string name="set_ctrl_asr_models">Select Language Model</string>
    <string name="set_ctrl_asr_model_null">No model selected</string>
    <string name="set_ctrl_asr_model_ready">Model ready: [%1$s]</string>
    <string name="set_ctrl_asr_model_incomplete">Model incomplete：[%1$s]</string>
    <string name="set_ctrl_asr_model_dl_title">Downloading Model</string>
    <string name="set_ctrl_asr_model_dl_title2">Downloading Model: %1$s</string>
    <string name="set_ctrl_asr_model_dl_idx">Fetching model index</string>
    <string name="set_ctrl_asr_model_dl_files">(%1$d/%2$d) Downloading model files</string>
    <string name="set_ctrl_asr_model_dl_item">%1$.1f%% %2$s/%3$s</string>
    <string name="set_ctrl_asr_model_dl_complete">Download complete</string>
    <string name="set_ctrl_asr_model_dl_failed">Download failed: %1$s, please try again</string>
    <string name="set_ctrl_asr_enable">Enable Speech Recognition</string>
    <string name="set_ctrl_asr_enable_success">Model ready</string>
    <string name="set_ctrl_asr_enable_failed">Disabled: model not ready</string>
    <string name="set_ctrl_asr_similarity">Similarity Threshold</string>
    <string name="set_ctrl_asr_similarity_desc">If the similarity between the recognized text and the target text exceeds the threshold, the most similar stratagem will be activated</string>
    <string name="set_ctrl_asr_gpu">Enable Hardware Acceleration</string>
    <string name="set_ctrl_asr_gpu_desc">Run model on GPU</string>
    <string name="set_ctrl_asr_activate">Configure Activation Words</string>
    <string name="set_ctrl_asr_activate_edit">Activation Words</string>
    <string name="set_ctrl_asr_activate_desc">Upon recognizing the specified word, activate the speech recognition function</string>
    <string name="set_ctrl_asr_keywords">Configure Recognition Keywords</string>
    <string name="set_ctrl_asr_keywords_desc">Assign recognition words for each stratagem</string>
    <string name="set_ctrl_asr_auto_keywords">Enable Automatic Keywords Generation</string>
    <string name="set_ctrl_asr_auto_keywords_desc">Automatically generate keywords based on stratagems\' names</string>
    <string name="set_ctrl_asr_test">Recognition Test</string>
    <string name="set_info_hdr">Info</string>
    <string name="set_info_db">Database Version</string>
    <string name="set_info_db_ver">[%1$s] %2$s</string>
    <string name="set_info_db_latest">[%1$s] %2$s (latest)</string>
    <string name="set_info_db_empty">Empty</string>
    <string name="set_info_db_incomplete">Incomplete</string>
    <string name="set_info_db_chk">Database Version (Checking)</string>
    <string name="set_info_db_updatable">Database Version (Updatable)</string>
    <string name="set_info_db_ver_diff">[%1$s] %2$s ➡\n[%3$s] %4$s</string>
    <string name="set_info_db_updt_title">Updating Database</string>
    <string name="set_info_db_updt_title2">Updating Database: %1$s</string>
    <string name="set_info_db_updt_idx">Fetching database index</string>
    <string name="set_info_db_updt_db">Fetching database</string>
    <string name="set_info_db_updt_icons">(%1$d/%2$d) Downloading icons</string>
    <string name="set_info_db_updt_icons_item">%1$.1f%% %2$s/%3$s</string>
    <string name="set_info_db_updt_complete">Update complete</string>
    <string name="set_info_db_updt_failed">Update failed: %1$s, please try again</string>
    <string name="set_info_app">App Version</string>
    <string name="set_info_app_chk">App Version (Checking)</string>
    <string name="set_info_app_updatable">App Version (Updatable)</string>
    <string name="set_info_app_ver">%1$s[API%2$d]</string>
    <string name="set_info_app_latest">%1$s[API%2$d] (latest)</string>
    <string name="set_info_app_ver_diff">%1$s[API%2$d] ➡ %3$s</string>
    <string name="set_info_export">Backup User Data</string>
    <string name="set_info_export_success">Export Successful</string>
    <string name="set_info_export_failed">Export Failed: %1$s</string>
    <string name="set_info_export_cancel">Export Canceled</string>
    <string name="set_info_import">Restore User Data</string>
    <string name="set_info_import_success">Import Successful</string>
    <string name="set_info_import_failed">Import Failed: %1$s</string>
    <string name="set_info_import_failed_ver">Import Failed: Backup file version not supported</string>
    <string name="set_info_import_cancel">Import Canceled</string>
    <string name="set_info_about">About</string>
    <string name="utils_parse_url_failed">Fail to parse url: %1$s</string>
    <string name="network_addr_suffix" translatable="false">%1$s ┃ %2$s:%3$d</string>
    <string name="network_connecting">Connecting…</string>
    <string name="network_retry">Connecting… (retry %1$d/%2$d)</string>
    <string name="network_waiting">Waiting… (retry %1$d/%2$d)</string>
    <string name="network_connected">Connected</string>
    <string name="network_failed">Connect failed</string>
    <string name="network_response_error">Server response error, please check whether the server is running properly</string>
    <string name="network_status_error">Server status error, please check whether the server is running properly</string>
    <string name="network_status_1">Server API version error, request API%1$s</string>
    <string name="network_auth">Waiting for server-side authentication, local sid is %1$s</string>
    <string name="network_auth_failed">Authentication failed, please try again and accept the authentication request on server</string>
    <string name="dlg_comm_cancel">Cancel</string>
    <string name="dlg_comm_confirm">Confirm</string>
    <string name="dlg_db_updt_title">Select Database Channel</string>
    <string name="dlg_db_updt_channel_hd2">Helldivers 2</string>
    <string name="dlg_db_updt_channel_hd">Helldivers</string>
    <string name="dlg_db_updt_channel_custom">Custom</string>
    <string name="dlg_db_updt_channel_custom_url">Custom DB Index URL</string>
    <string name="dlg_db_updt_clear">Clear Cache</string>
</resources>