<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.settings.SettingsAsrFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/default_string"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_2"
        tools:ignore="ImageContrastCheck" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundBlur" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/menu_back"
            android:src="@drawable/ic_back"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/set_ctrl_asr_hdr"
            android:textSize="24sp"
            android:theme="@style/AppTextTitle" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/set_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="85dp"
        android:fadeScrollbars="false"
        android:scrollbarSize="4dp"
        android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
        android:scrollbarTrackVertical="@drawable/scrollbar_vertical_track">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundPrimary"
                android:gravity="start|center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_alert"
                    />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_ctrl_asr_alert"
                        android:theme="@style/AppText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/set_ctrl_asr_alert_desc"
                        android:theme="@style/AppTextHint" />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <indie.wistefinch.callforstratagems.utils.AppButton
                android:id="@+id/set_ctrl_asr_models"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/set_ctrl_asr_models"
                app:hint="@string/default_string"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundPrimary"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_ctrl_asr_enable"
                        android:theme="@style/AppText" />

                    <TextView
                        android:id="@+id/set_ctrl_asr_switch_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/default_string"
                        android:theme="@style/AppTextHint" />

                </LinearLayout>

                <Space
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    tools:ignore="TooManyViews" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/set_ctrl_asr_switch"
                    android:layout_width="75dp"
                    android:layout_height="35dp"
                    app:trackTint="@color/switch_color"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundPrimary"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_ctrl_asr_similarity"
                        android:theme="@style/AppText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/set_ctrl_asr_similarity_desc"
                        android:theme="@style/AppTextHint"
                        tools:ignore="VisualLintLongText" />

                </LinearLayout>

                <Space
                    android:layout_width="5dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/set_ctrl_asr_similarity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="75dp"
                    android:autofillHints="25"
                    android:background="@drawable/edit_text_view_bg"
                    android:inputType="number"
                    android:theme="@style/AppEditText"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_unit_percentage"
                    android:theme="@style/AppTextHint" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                tools:ignore="TooManyViews" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundPrimary"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_ctrl_asr_gpu"
                        android:theme="@style/AppText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/set_ctrl_asr_gpu_desc"
                        android:theme="@style/AppTextHint" />

                </LinearLayout>

                <Space
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    tools:ignore="TooManyViews" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/set_ctrl_asr_gpu"
                    android:layout_width="75dp"
                    android:layout_height="35dp"
                    app:trackTint="@color/switch_color"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                tools:ignore="TooManyViews" />

            <indie.wistefinch.callforstratagems.utils.AppButton
                android:id="@+id/set_ctrl_asr_activate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/set_ctrl_asr_activate"
                app:hint="@string/set_ctrl_asr_activate_desc"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                tools:ignore="TooManyViews" />

            <indie.wistefinch.callforstratagems.utils.AppButton
                android:id="@+id/set_ctrl_asr_keywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/set_ctrl_asr_keywords"
                app:hint="@string/set_ctrl_asr_keywords_desc"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                tools:ignore="TooManyViews" />

            <indie.wistefinch.callforstratagems.utils.AppButton
                android:id="@+id/set_ctrl_asr_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/set_ctrl_asr_test"
                app:hint="@string/default_string"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>