<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundPrimary"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/dlg_db_update_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="start"
            android:text="@string/dlg_db_updt_title"
            style="@style/AppTextTitle"
            android:textSize="20sp"
            android:visibility="visible" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/backgroundPrimary"
            android:contentDescription="@string/default_string"
            android:scaleType="centerCrop"
            android:src="@drawable/stripes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="false"
                android:gravity="center"
                android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
                android:scrollbarTrackVertical="@drawable/scrollbar_vertical_track"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="bottom"
                    android:layout_marginHorizontal="20dp">

                    <RadioGroup
                        android:id="@+id/dlg_db_update_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/dlg_db_update_hd2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dlg_db_updt_channel_hd2"
                            android:textColor="@color/textPrimary"
                            tools:ignore="VisualLintButtonSize" />

                        <RadioButton
                            android:id="@+id/dlg_db_update_hd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dlg_db_updt_channel_hd"
                            android:textColor="@color/textPrimary"
                            tools:ignore="VisualLintButtonSize" />

                        <RadioButton
                            android:id="@+id/dlg_db_update_custom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dlg_db_updt_channel_custom"
                            android:textColor="@color/textPrimary"
                            tools:ignore="VisualLintButtonSize" />

                    </RadioGroup>

                    <EditText
                        android:id="@+id/dlg_db_update_custom_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:importantForAutofill="no"
                        android:width="150dp"
                        android:background="@drawable/edit_text_view_bg"
                        android:hint="@string/dlg_db_updt_channel_custom_url"
                        android:inputType="text"
                        android:theme="@style/AppEditText"
                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp">

            <indie.wistefinch.callforstratagems.utils.AppButton
                android:id="@+id/dlg_db_update_clear"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                app:text="@string/dlg_db_updt_clear"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <indie.wistefinch.callforstratagems.utils.AppButton
                    android:id="@+id/dlg_db_update_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginEnd="5dp"
                    app:text="@string/dlg_comm_cancel"/>

                <indie.wistefinch.callforstratagems.utils.AppButton
                    android:id="@+id/dlg_db_update_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    app:text="@string/dlg_comm_confirm"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

